<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/baseline_co_present_24"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_sesiones"
            android:icon="@drawable/baseline_art_track_24"
            android:title="@string/menu_sesiones" />
        <item
            android:id="@+id/nav_reglamento"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/menu_reglas" />
        <item
            android:id="@+id/nav_temario"
            android:icon="@drawable/baseline_auto_awesome_motion_24"
            android:title="@string/menu_temario" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>