<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.iecaapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.iecaapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.iecaapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.iecaapp.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_reglamento"
        android:name="com.example.iecaapp.ui.reglas.ReglasFragment"
        android:label="@string/menu_reglas"
        tools:layout="@layout/fragment_reglas" />
    <fragment
        android:id="@+id/nav_sesiones"
        android:name="com.example.iecaapp.ui.sesiones.SesionesFragment"
        android:label="@string/menu_sesiones"
        tools:layout="@layout/fragment_sesiones" />
    <fragment
        android:id="@+id/nav_temario"
        android:name="com.example.iecaapp.ui.temario.TemarioFragment"
        android:label="@string/menu_temario"
        tools:layout="@layout/fragment_temario" />
</navigation>